# DetectionOfContraband

./: .gitignore  CMakeLists.txt  README.md  TODO  ]  tags
.cache/clangd/index/: AStyle.h.3297EB22E9339F8B.idx  AlgoUtils.cpp.68C94C5E6208EF22.idx  AlgoUtils.h.28A2365F1A1C7F44.idx  AlternativeDark.cpp.C81F5C7BE593FE99.idx  AlternativeDark.h.6EC8AFE66C1A6BF8.idx  Application.h.11012A6B380D7C3A.idx  Classic.cpp.B65C4E05DE2CF152.idx  Classic.h.203D55D65303777C.idx  ConfigParser.cpp.ADB0B9CD44123DD7.idx  ConfigParser.h.C87641EA717F302B.idx  Dark.cpp.995D3EB20AC42F9F.idx  Dark.h.DDA4ECC941E3AB82.idx  DuneDark.cpp.66F67C6AD525174C.idx  DuneDark.h.A4E638C8B732A15C.idx  FontManager.cpp.C2A56D9DAD7365CD.idx  FontManager.h.3D5296BE51BB04C3.idx  Light.cpp.4C7AB1116A8537B9.idx  Light.h.24E49814473B6399.idx  OnnxruntimeAssets.h.1D5BDB6DB57B90C9.idx  OnnxruntimeInfer.cpp.95CE4075C62A9151.idx  OnnxruntimeInfer.h.5BA9617E9DC9FF56.idx  StyleManager.cpp.A9774A49C7BDED6D.idx  StyleManager.h.2E59B13B0822C453.idx  Styling.h.610F6C6AA5BC3A38.idx  TXTLogger.cpp.A541051324227AD3.idx  Utils.cpp.8AAB9134083C8B01.idx  Utils.h.34045F278ECD34A9.idx  glfw3.h.4AA0A5D2CD0A15C1.idx  imconfig.h.400BBD059055795A.idx  imgui.cpp.FB4DB7BE92F5289E.idx  imgui.h.B8075ACA6D4B8EFE.idx  imgui_demo.cpp.F5CCFEE9D5F31044.idx  imgui_draw.cpp.8FAD20AF4199E427.idx  imgui_impl_glfw.cpp.B7DCAA87ED8C1AFC.idx  imgui_impl_glfw.h.62A62BA00F6D2497.idx  imgui_impl_opengl3.cpp.96902CD20E56D7E9.idx  imgui_impl_opengl3.h.EC05AD9D82589705.idx  (+13 more)
.ccls-cache/@@home@wxxz@workspace@DetectionOfContraband/: @home@wxxz@.local@share@nvim@lsp_servers@ccls@clang-resource@include@__stddef_max_align_t.h.blob  @home@wxxz@.local@share@nvim@lsp_servers@ccls@clang-resource@include@stdarg.h.blob  @home@wxxz@.local@share@nvim@lsp_servers@ccls@clang-resource@include@stddef.h.blob  @home@wxxz@.local@share@nvim@lsp_servers@ccls@clang-resource@include@stdint.h.blob  @usr@include@GL@gl.h.blob  @usr@include@GL@glext.h.blob  @usr@include@KHR@khrplatform.h.blob  @usr@include@aarch64-linux-gnu@asm@errno.h.blob  @usr@include@aarch64-linux-gnu@bits@byteswap.h.blob  @usr@include@aarch64-linux-gnu@bits@cpu-set.h.blob  @usr@include@aarch64-linux-gnu@bits@endian.h.blob  @usr@include@aarch64-linux-gnu@bits@endianness.h.blob  @usr@include@aarch64-linux-gnu@bits@errno.h.blob  @usr@include@aarch64-linux-gnu@bits@floatn-common.h.blob  @usr@include@aarch64-linux-gnu@bits@floatn.h.blob  @usr@include@aarch64-linux-gnu@bits@libc-header-start.h.blob  @usr@include@aarch64-linux-gnu@bits@locale.h.blob  @usr@include@aarch64-linux-gnu@bits@long-double.h.blob  @usr@include@aarch64-linux-gnu@bits@pthreadtypes-arch.h.blob  @usr@include@aarch64-linux-gnu@bits@pthreadtypes.h.blob  @usr@include@aarch64-linux-gnu@bits@sched.h.blob  @usr@include@aarch64-linux-gnu@bits@select.h.blob  @usr@include@aarch64-linux-gnu@bits@setjmp.h.blob  @usr@include@aarch64-linux-gnu@bits@stdint-intn.h.blob  @usr@include@aarch64-linux-gnu@bits@stdint-uintn.h.blob  @usr@include@aarch64-linux-gnu@bits@stdio_lim.h.blob  @usr@include@aarch64-linux-gnu@bits@stdlib-float.h.blob  @usr@include@aarch64-linux-gnu@bits@struct_mutex.h.blob  @usr@include@aarch64-linux-gnu@bits@struct_rwlock.h.blob  @usr@include@aarch64-linux-gnu@bits@sys_errlist.h.blob  @usr@include@aarch64-linux-gnu@bits@thread-shared-types.h.blob  @usr@include@aarch64-linux-gnu@bits@time.h.blob  @usr@include@aarch64-linux-gnu@bits@time64.h.blob  @usr@include@aarch64-linux-gnu@bits@timesize.h.blob  @usr@include@aarch64-linux-gnu@bits@timex.h.blob  @usr@include@aarch64-linux-gnu@bits@types.h.blob  @usr@include@aarch64-linux-gnu@bits@types@FILE.h.blob  @usr@include@aarch64-linux-gnu@bits@types@__FILE.h.blob  @usr@include@aarch64-linux-gnu@bits@types@__fpos64_t.h.blob  @usr@include@aarch64-linux-gnu@bits@types@__fpos_t.h.blob  (+149 more)
.ccls-cache/@home@wxxz@workspace@DetectionOfContraband/: src@Resources@Loaders@TextureFilteringMode.h.blob  src@Resources@Model.cpp  src@Resources@Model.cpp.blob  src@Resources@Session.cpp  src@Resources@Session.cpp.blob  src@Resources@Texture.cpp  src@Resources@Texture.cpp.blob  src@Resources@Texture.h.blob
src/: main.cpp
src/Common/: CSingleton.h  ConfigParser.cpp  ConfigParser.h  Image.cpp  Image.h  Math.cpp  TextureLoader.h  Yolov5Structure.hpp
src/Communication/: ICommu.h  TODO
src/Core/: Application.cpp  Application.h  Context.cpp  Context.h  PanelsManager.h
src/ModelAdapter/: AbstractDetectAlgorithm.h
src/OnnxModelAdapter/: APostprocessing.h  APreprocessing.h  AbstractDetectAlgorithm.cpp  AbstractDetectAlgorithm.h  AlgoUtils.cpp  CSession.h  IDetector.h  Image.h  OnnxAlgorithm.cpp  OnnxAlgorithm.h  OnnxCommon.hpp  OnnxruntimeAssets.h  OnnxruntimeInfer.cpp  OnnxruntimeInfer.h  Utils.cpp  Utils.h
src/Resources/: DimensionInfomation.h  Model.cpp  Model.h  ModelConfig.h  Session.cpp  Session.h  Texture.cpp  Texture.h
src/UI/: AbstractApplication.h  Application.cpp  Application.h  ui_AbstractEngine.h  ui_Engine.cpp  ui_Engine.h  ui_EngineAbstractConfig.h  ui_EngineConfig.cpp  ui_EngineConfig.h
test/: array.cpp  onnxruntimeTest.cpp  split.cpp  string.cpp  tempTest.cpp  unique_ptr_test.cpp
test/GetCurrentPath/: CMakeLists.txt  ClassNames.conf  GetCurrentPath.cpp  ModelClassNameManager.cpp  ModelClassNameManager.h  testReadClassName.cpp
test/MessageValidate/: MessageValidate.cpp
(+136 files in other folders)
